--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </label>
       
       <ul>
-        <li><a href="#"</a>Home</li>
-        <li><a href="#"</a>About</li>
-        <li><a href="#"</a>Contact</li>
+        <li><a href="#"</a>Davisão</li>
+        <li><a href="#"</a>é otaku</li>
+        <li><a href="#"</a>Não assumido!</li>
       </ul>
 </body>
 </html>
