--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </label>
       
       <ul>
-        <li><a href="#"</a>Davisão</li>
-        <li><a href="#"</a>é otaku</li>
-        <li><a href="#"</a>Não assumido!</li>
+        <li><a href="#"</a>Obrigado</li>
+        <li><a href="#"</a>Por</li>
+        <li><a href="#"</a>testar.</li>
       </ul>
 </body>
 </html>
